Project structure refuctored.

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="static/css/bootstrap.min.css">
 </head>
 <body>
 
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-">
             <div class="container-fluid">
-              <a class="navbar-brand" href="index.html"><img src="thumb_logo_23394.png" class="w-25 rounded-3" alt="logo"></a>
+              <a class="navbar-brand" href="index.html"><img src="static/img/thumb_logo_23394.png" class="w-25 rounded-3" alt="logo"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -148,7 +148,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active text-dark" data-bs-interval="10000">
-            <img src="pes.jpg" class="d-block w-100" alt="Собака">
+            <img src="static/img/pes.jpg" class="d-block w-100" alt="Собака">
             <div class="carousel-caption d-none d-md-block">
                 <h5 class="text-dark bg-white">Найдена собака</h5>
                 <p class="text-dark bg-white">Рыжая собака была утеряна в Приморском районе.</p>
@@ -157,7 +157,7 @@
             </div>
 
             <div class="carousel-item active text-dark" data-bs-interval="10000">
-                <img src="лщщще.jpg" class="d-block w-100" alt="Кошка">
+                <img src="static/img/лщщще.jpg" class="d-block w-100" alt="Кошка">
                 <div class="carousel-caption d-none d-md-block">
                     <h5 class="text-dark bg-white">Найдена кошка</h5>
                     <p class="text-dark bg-white">Черная кошка была утеряна в Приморском районе.</p>
@@ -166,7 +166,7 @@
                 </div>
 
                 <div class="carousel-item active text-dark" data-bs-interval="10000">
-                    <img src="загрузка (1).jfif" class="d-block w-100" alt="Мышь">
+                    <img src="static/img/загрузка (1).jfif" class="d-block w-100" alt="Мышь">
                     <div class="carousel-caption d-none d-md-block">
                         <h5 class="text-dark bg-white">Найдена мышь</h5>
                         <p class="text-dark bg-white">Серая мышка была утеряна в Приморском районе.</p>
@@ -193,7 +193,7 @@
     <h2 class="text-center text-white bg-primary m-2">Карточки найденных животных</h2>
     <div class="d-flex flex-row flex-wrap">
       <div class="d-flex flex-row flex-wrap border m-3 p-3" style="min-width: 300px; width: 45%;">
-        <img src="1.jpg" class="w-75" alt="рисунок животного">
+        <img src="static/img/1.jpg" class="w-75" alt="рисунок животного">
         <p class="w-50 text-primary" style="min-width: 250px;">id:</p>
         <p class="w-50" style="min-width: 250px;">14</p>
   
@@ -213,7 +213,7 @@
         <p class="w-50" style="min-width: 300px;">24-03-2020</p>
       </div>
       <div class="d-flex flex-row flex-wrap border m-3 p-3" style="min-width: 300px; width: 45%;">
-        <img src="2.jpg" class="w-75" alt="рисунок животного">
+        <img src="static/img/2.jpg" class="w-75" alt="рисунок животного">
         <p class="w-50 text-primary" style="min-width: 250px;">id:</p>
         <p class="w-50" style="min-width: 250px;">18</p>
   
@@ -261,7 +261,7 @@
 
 
 
-    <script src="bootstrap.bundle.js"></script>
+    <script src="static/js/bootstrap.bundle.js"></script>
 </body>
 </html>
 
